--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "fis3 release development -wL",
-    "release":"fis3 release production -d E:\\output" 
+    "release": "fis3 release production -d E:\\output/smilecui.github.io/Image_Magnifier"
   },
   "repository": {
     "type": "git",
@@ -21,8 +21,10 @@
   "devDependencies": {
     "fis-optimizer-minify-html": "^1.0.0",
     "fis-parser-babel-6.x-fork": "^1.0.0",
+    "fis-preprocessor-inline-deps": "0.0.0",
     "fis3-hook-commonjs": "^0.1.26",
     "fis3-hook-node_modules": "^2.2.9",
+    "fis3-hook-relative": "^2.0.1",
     "fis3-parser-stylus": "^0.1.3",
     "fis3-parser-vue-component": "^5.5.1",
     "fis3-parser-webpack": "0.0.5",
